# recipebook_api

./: .env.exmaple  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/app/core/: config.py
