[tool.poetry]
name = "recipebook_api"
version = "0.1.0"
description = "final project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
pydantic = "^1.10.7"
SQLAlchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
